syntax="proto3";

package user;

option go_package = "./";

message ValidatePasswordRequest {
  string username = 1;
  string password = 2;
}

message ValidatePasswordResponse {
  bool success = 1;
}

service UserService {
  rpc ValidatePassword (ValidatePasswordRequest) returns (ValidatePasswordResponse);
}